name: reliquary
version: 0.1.0.0
synopsis: Concatenative language with macros and dependent types
description: Concatenative language with macros and dependent types
license: MIT
license-file: LICENSE
author: Samuel Breese
maintainer: samuel@chame.co
category: Language
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules: Reliquary.Core.AST
                 , Reliquary.Core.DeBruijn
                 , Reliquary.Core.Evaluate
                 , Reliquary.Core.TypeCheck

                 , Reliquary.Utils.Monad
                 , Reliquary.Utils.Error

                 , Reliquary.Parser
                 , Reliquary.AST
                 , Reliquary.Evaluate
                 , Reliquary.Dictionary
  
  build-depends: base
               , containers
               , parsec
               , mtl

  default-language: Haskell2010
  ghc-options: -fwarn-incomplete-patterns

executable reliquary
  main-is: Main.hs
  hs-source-dirs: main
  
  build-depends: base
               , reliquary
               , mtl
               , haskeline
               , rainbow

  default-language: Haskell2010
  ghc-options: -fwarn-incomplete-patterns
